# gbm-bench

./: .gitignore  CLAUDE.md  README.md  benchmark.py  benchmark_2mac_xgboost.py  benchmark_full.py  benchmark_higgs.py  benchmark_higgs_xgb.py  benchmark_results.json  benchmark_results_20251223_201602.json  benchmark_results_a100_4gpu.json  benchmark_rf_distributed.py  benchmark_rf_model_parallel.py  pyproject.toml
_prototypes/: benchmark_2machine_lgb.py  benchmark_final_lgb.py  benchmark_remote_only.py  test_2machine_v2.py  test_approach1_ssh_tunnel.py  test_approach2_remote_scheduler.py  test_dask_connectivity.py  test_xgboost_dask.py  test_xgboost_ray.py
docs/: DASK_DISTRIBUTED.md
